# nifti-triple-viewer

./: .gitignore  Cargo.toml  README.md  index.html  justfile  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: deploy.yml
src/: app.tsx  index.css  main.rs  main.tsx
src/components/: slice-viewer.tsx
src/hooks/: use-media-query.ts
src/lib/: nifti-utils.ts  orientation.ts  renderer.ts  types.ts
web/: index.html
